--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "debug",
            // "program": "${file}"
             "program": "${workspaceFolder}/main.go",
-            "args": [" -enableCredentials=false -serverPort=8080 -mongoDatabase=admin -mongoURI=mongodb://root:example@localhost:27017/petstore?authSource=admin"]
+            "args": [" -enableCredentials=false -serverPort=8080 -mongoDatabase=petstore -mongoURI=mongodb://root:example@localhost:27017/petstore?authSource=admin"]
         }
 
     ]
