--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,8 +13,6 @@ on:
   pull_request:
     branches: [ main ]
 
-
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,25 +31,24 @@ jobs:
       id-token: write
 
     steps:
+      # Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Workaround: https://github.com/docker/build-push-action/issues/461
+      # Setup Docker buildx (a Docker CLI plugin for extended build capabilities with BuildKit)
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
 
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
+      # Login to Docker registry (skip on pull requests)
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
         with:
           registry: ${{ env.REGISTRY }}
-          username:  ${{ env.USER_ACCOUNT }}
+          username: ${{ env.USER_ACCOUNT }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
+      # Extract Docker metadata (tags, labels) for the image
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
@@ -68,4 +65,3 @@ jobs:
           context: .          
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.USER_ACCOUNT }}/${{ env.IMAGE_NAME }}:${{ env.TAG_NAME }}
-    
