--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,12 +37,12 @@ jobs:
 
       # Setup Docker buildx (a Docker CLI plugin for extended build capabilities with BuildKit)
       - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+        uses: docker/setup-buildx-action@main
 
       # Login to Docker registry (skip on pull requests)
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+        uses: docker/login-action@main
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ env.USER_ACCOUNT }}
@@ -51,7 +51,7 @@ jobs:
       # Extract Docker metadata (tags, labels) for the image
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@main
         with:
           context: .          
           images: name/app
@@ -60,7 +60,7 @@ jobs:
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
-        uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
+        uses: docker/build-push-action@main
         with:
           context: .          
           push: ${{ github.event_name != 'pull_request' }}
