--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,16 +33,16 @@ jobs:
     steps:
       # Checkout the repository
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Setup Docker buildx (a Docker CLI plugin for extended build capabilities with BuildKit)
       - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@main
+        uses: docker/setup-buildx-action@v3
 
       # Login to Docker registry (skip on pull requests)
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@main
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ env.USER_ACCOUNT }}
@@ -51,7 +51,7 @@ jobs:
       # Extract Docker metadata (tags, labels) for the image
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@main
+        uses: docker/metadata-action@v5
         with:
           context: .          
           images: name/app
@@ -60,7 +60,7 @@ jobs:
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
-        uses: docker/build-push-action@main
+        uses: docker/build-push-action@v5
         with:
           context: .          
           push: ${{ github.event_name != 'pull_request' }}
