--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,12 +49,12 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       # Extract Docker metadata (tags, labels) for the image
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          context: .          
-          images: name/app
+      # - name: Extract Docker metadata
+      #   id: meta
+      #   uses: docker/metadata-action@v5
+      #   with:
+      #     context: .          
+      #     images: name/app
         
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
