--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,12 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${fileDirname}"
+            "program": "${workspaceFolder}/main.go",
+            "args": [
+                "-serverAddr=0.0.0.0",
+                "-serverPort=8090",
+                "-redisURI=redis://localhost:6379/"
+            ]
         }
     ]
 }
