--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "Launch file",
             "type": "go",
             "request": "launch",
-            "mode": "auto",
+            "mode": "debug",          
             "program": "${workspaceFolder}/main.go",
-            "args": [
-                "-serverAddr=0.0.0.0",
+            "args": [ 
+                "-enableCredentials=false",
                 "-serverPort=8090",
-                "-redisURI=redis://localhost:6379/"
+                "-mongoDatabase=petstore", 
+                "-mongoURI=mongodb://root:example@localhost:27017/petstore?authSource=admin"
             ]
         }
+
     ]
 }
