--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
       # github.repository as <account>/<repo>
       USER_ACCOUNT: middleland
       IMAGE_NAME: go-server-petstore
-      TAG_NAME: redis
+      TAG_NAME: mongo
       
     permissions:
       contents: read
