--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "LAUNCH FILE",
+            "name": "Launch",
             "type": "go",
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}/main.go",
             "env": {
-                "SERVER_ADDR": "localhost:8080",
+                "SERVER_ADDR": "localhost:8090",
                 "DATABASE_URI": "mongodb://root:example@localhost:27017/petstore?authSource=admin",
                 "DATABASE_NAME": "petstore",
-                "ENABLE_CREDENTIALS": "true"
+                "ENABLE_CREDENTIALS": "false"
             }
         }
     ]
